home page bones, looks disgusting

--- a/html/home.html
+++ b/html/home.html
@@ -13,19 +13,94 @@
 </head>
 <body>
 
-  <!-- HEADER: TITLE AND TOPICS(WILL BE ANCHORED THEM TO SAME PAGE) -->
-  <header>
-    <h1 class="header-title">B.Y.O.B</h1>
-    <ul class="header-links">
-      <li>About</li>
-      <li>Contact</li>
-      <li>Team</li>
-    </ul>
-  </header>
-
+  <!-- HEADER: TITLE AND TOPICS -->
+  <div class="container">
+    <header>
+      <h1 class="header-title">B.Y.O.B</h1>
+      <ul class="header-links">
+        <!-- LINKS TO ELEMENT ON THIS PAGE WITH THE id="header-link" -->
+        <li><a href="#header-link">About</a></li>
+        <li><a href="#header-link">Team</a></li>
+        <li>Blog</li>
+        <li>Recipes</li>
+      </ul>
+    </header>
+  </div>
   
-  <li>Blog</li>
-  <li>Recipes</li>
+  <div class="container">
+    <div class="jumbotron">
+      <h2>Be your own bartender</h2>
+      <p>We are here to bring basic mixology to the masses. Many classic drinks are simple combinations of easy to acquire ingredients. Our logic engine lets you confidently select new options among tried and true classics.</p>
+    </div>
+  </div>
+
+  <div class="container" id="header-link">
+    <div class="row">
+      <div class="col-lg-12">
+        <h2>About</h2>
+        <p>We start with a base spirit (vodka, gin, rum, bourbon, etc), and then we go from there. We connect you to videos for all of the recipes, no matter how simple.</p>
+        <p>Mix with confidence</p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-4">
+        <h3>Recipes</h3>
+        <p></p>
+      </div>
+      <div class="col-lg-4">
+        <h3>Your Home Bar</h3>
+        <p></p>
+      </div>
+      <div class="col-lg-4">
+        <h3>Bars</h3>
+        <p></p>
+      </div>
+    </div>
+  </div>
+
+  <div class="container" id="header-link">
+    <div class="row">
+      <div class="col-lg-12">
+        <h2>Team</h2>
+        <p>Be Your Own Bartender was founded by a team of full-stack web developers.</p>
+        <p>We believe in providing a simple, streamline process of providing simple alcoholic recipes.</p>
+        <p>We are values- and culture-driven. We work with honesty, transparency, and "no ego". For our users, this translates into an upfront approach, based on mutual trust and respect, that forms the basis of profitable, long-lasting relationships.</p>
+        <p>We look forward to meeting you and introducting you to the B.Y.O.B way.</p>
+      </div>
+    </div>
+    
+    <div class="row">
+      <div class="col-lg-4">
+        <h3>Caitlyn</h3>
+        <p>Web Developer</p>
+      </div>
+      <div class="col-lg-4">
+        <h3>Morgan</h3>
+        <p>Web Developer</p>
+      </div>
+      <div class="col-lg-4">
+        <h3>Meron</h3>
+        <p>Web Developer</p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-4">
+        <h3>Tamar</h3></div>
+        <p>Web Developer</p>
+      <div class="col-lg-4">
+        <h3>Deedee</h3>
+        <p>Web Developer</p>
+      </div>
+      <div class="col-lg-4">
+        <h3>Arthur</h3>
+        <p>Mascot</p>
+      </div>
+    </div>
+
+  </div>
+
 
   <!-- JQUERY CDN -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
