--- a/html/home.html
+++ b/html/home.html
@@ -6,7 +6,6 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <!-- BOOTSTRAP CDN -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="../css/reset.css">
   <link rel="stylesheet" href="../css/style.css">
   <title>B.Y.O.B</title>
@@ -14,91 +13,140 @@
 <body>
 
   <!-- HEADER: TITLE AND TOPICS -->
-  <div class="container">
-    <header>
-      <h1 class="header-title">B.Y.O.B</h1>
+  <header>
+    <div class="container">
+    <h1 class="header-brand"><a href="./home.html">B.Y.O.B - Be Your Own Bartender</a></h1>
       <ul class="header-links">
         <!-- LINKS TO ELEMENT ON THIS PAGE WITH THE id="header-link" -->
         <li><a href="#header-link">About</a></li>
         <li><a href="#header-link">Team</a></li>
-        <li>Blog</li>
-        <li>Recipes</li>
+        <!-- LNKS TO A DIFF PAGE -->
+        <li><a href="./blog.html">Blog</a></li>
+        <li><a href="./recipe.html">Recipes</a></li>
       </ul>
-    </header>
+    </div>
+  </header>
   </div>
   
+  <!-- JUMBOTRON WITH NAME SPELLED OUT AND SHORT MESSAGE -->
+  <div class="jumbotron">
+    <div class="container">
+      <h2 class="jumbotron-title">Be your own bartender</h2>
+      <p class="jumbotron-description">We are here to bring basic mixology to the masses. Many classic drinks are simple combinations of easy to acquire ingredients. Our logic engine lets you confidently select new options among tried and true classics.</p>
+    </div>
+  </div>
+
+  <!-- ABOUT SECTION -->
+  <section class="about">
+    <div class="container" id="header-link">
+
+      <div class="row">
+        <div class="col-lg-12">
+          <h2 class="about-title">About</h2>
+          <p class="about-title-description">We start with a base spirit (vodka, gin, rum, bourbon, etc), and then we go from there. We connect you to videos for all of the recipes, no matter how simple.</p>
+          <p class="about-title-description">Mix with confidence.</p>
+        </div>
+      </div>
+      
+      <div class="row">
+        <!-- RECIPE: SHORT DESCRIPTION OF RECIPES-->
+        <div class="col-lg-4">
+          <h3 class="about-topic">Recipes</h3>
+          <p class="about-topic-description">The heart of our project: Tasty classics with ingredients you should be able to acquire easily. Many of the best drinks only require 2-5 ingredients. We'll tell you what you need and how to use it.</p>
+        </div>
+        <!-- HOME BAR: SHORT DESCRIPTION OF STOCKING HOME BARS -->
+        <div class="col-lg-4">
+          <h3 class="about-topic">Your Home Bar</h3>
+          <p class="about-topic-description">Setting up a home bar? We got you. We will help you figure our what you need to entertain, be able to make several classic drinks at home while not breaking the bank.</p>
+        </div>
+        <!-- BARS: SHORT DESCRIPTION OF GOING OUT OT BARS OPTION -->
+        <div class="col-lg-4">
+          <h3 class="about-topic">Bars</h3>
+          <p class="about-topic-description">Want to get fancy? Thinking of elaborate specialty drinks? Leave that to the professionals. We will help you find the best cocktail bars near you. No need to spend your hard earned cash on specialty ingredients that you will buy once, not get right, and will let sit in your cupboard and mock you.</p>
+        </div>
+      </div>
+
+    </div>
+  </section>  
+
+  <!-- MEET THE TEAM THAT CREATED THIS APP -->
+  <section class="team">
+    <div class="container" id="header-link">
+      <div class="row">
+        <div class="col-lg-12">
+          <h2 class="team-title">Team</h2>
+          <p class="team-description">Be Your Own Bartender was founded by a team of full-stack web developers.</p>
+          <p class="team-description">We believe in providing a simple, streamline process of providing simple alcoholic recipes.</p>
+          <p class="team-description">We are values- and culture-driven. We work with honesty, transparency, and "no ego". For our users, this translates into an upfront approach, based on mutual trust and respect, that forms the basis of profitable, long-lasting relationships.</p>
+          <p class="team-description">We look forward to meeting you and introducting you to the B.Y.O.B way.</p>
+        </div>
+      </div>
+      <!-- TEAM MEMBERS -->
+      <div class="row">
+        <div class="col-lg-4">
+          <h3 class="team-member">Caitlyn</h3>
+          <p class="team-member-title">Web Developer</p>
+        </div>
+        <div class="col-lg-4">
+          <h3 class="team-member">Morgan</h3>
+          <p class="team-member-title">Web Developer</p>
+        </div>
+        <div class="col-lg-4">
+          <h3 class="team-member">Meron</h3>
+          <p class="team-member-title">Web Developer</p>
+        </div>
+      </div>
+      <!-- TEAM MEMBERS CON'T -->
+      <div class="row">
+        <div class="col-lg-4">
+          <h3 class="team-member">Tamar</h3></div>
+          <p class="team-member-title">Web Developer</p>
+        <div class="col-lg-4">
+          <h3 class="team-member">Deedee</h3>
+          <p class="team-member-title">Web Developer</p>
+        </div>
+        <div class="col-lg-4">
+          <h3 class="team-member">Arthur</h3>
+          <p class="team-member-title">Mascot</p>
+        </div>
+      </div>
+
+    </div>
+  </section>
+
+  <!-- FOOTER -->
   <div class="container">
-    <div class="jumbotron">
-      <h2>Be your own bartender</h2>
-      <p>We are here to bring basic mixology to the masses. Many classic drinks are simple combinations of easy to acquire ingredients. Our logic engine lets you confidently select new options among tried and true classics.</p>
-    </div>
-  </div>
+    <footer>
+      <div class="row">
+        <div class="col-lg-4">
+          <h5 class="footer-title">Let us help you</h5>
+          <ul>
+            <li class="footer-list">Customer Service</li>
+            <li class="footer-list">My Account</li>
+            <li class="footer-list">Wish List</li>
+            <li class="footer-list">FAQs</li>
+          </ul>
+        </div>
+        <div class="col-lg-4">
+          <h5 class="footer-title">Get to know us</h5>
+          <ul>
+            <li class="footer-list">Corporate Responsibilty</li>
+            <li class="footer-list">Careers</li>
+            <li class="footer-list">Press</li>
+          </ul>
+        </div>
+        <div class="col-lg-4">
+          <h5 class="footer-title">Policies</h5>
+          <li class="footer-list">Terms & Conditions</li>
+          <li class="footer-list">Privacy Policy</li>
+          <li class="footer-list">Accessibility</li>
+        </div>
+      </div>
 
-  <div class="container" id="header-link">
-    <div class="row">
-      <div class="col-lg-12">
-        <h2>About</h2>
-        <p>We start with a base spirit (vodka, gin, rum, bourbon, etc), and then we go from there. We connect you to videos for all of the recipes, no matter how simple.</p>
-        <p>Mix with confidence</p>
-      </div>
-    </div>
+      <hr class="footer-breakline">
 
-    <div class="row">
-      <div class="col-lg-4">
-        <h3>Recipes</h3>
-        <p></p>
-      </div>
-      <div class="col-lg-4">
-        <h3>Your Home Bar</h3>
-        <p></p>
-      </div>
-      <div class="col-lg-4">
-        <h3>Bars</h3>
-        <p></p>
-      </div>
-    </div>
-  </div>
-
-  <div class="container" id="header-link">
-    <div class="row">
-      <div class="col-lg-12">
-        <h2>Team</h2>
-        <p>Be Your Own Bartender was founded by a team of full-stack web developers.</p>
-        <p>We believe in providing a simple, streamline process of providing simple alcoholic recipes.</p>
-        <p>We are values- and culture-driven. We work with honesty, transparency, and "no ego". For our users, this translates into an upfront approach, based on mutual trust and respect, that forms the basis of profitable, long-lasting relationships.</p>
-        <p>We look forward to meeting you and introducting you to the B.Y.O.B way.</p>
-      </div>
-    </div>
-    
-    <div class="row">
-      <div class="col-lg-4">
-        <h3>Caitlyn</h3>
-        <p>Web Developer</p>
-      </div>
-      <div class="col-lg-4">
-        <h3>Morgan</h3>
-        <p>Web Developer</p>
-      </div>
-      <div class="col-lg-4">
-        <h3>Meron</h3>
-        <p>Web Developer</p>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-lg-4">
-        <h3>Tamar</h3></div>
-        <p>Web Developer</p>
-      <div class="col-lg-4">
-        <h3>Deedee</h3>
-        <p>Web Developer</p>
-      </div>
-      <div class="col-lg-4">
-        <h3>Arthur</h3>
-        <p>Mascot</p>
-      </div>
-    </div>
-
+      <h6 class="footer-copyright">© 2019 B.Y.O.B - Be Your Own Bartender, All Rights Reserved.</h6>
+    </footer>
   </div>
 
 
