html and css are 90% done

--- a/html/home.html
+++ b/html/home.html
@@ -69,29 +69,34 @@
     </div>
   </section>  
 
+  <div class="container">
+    <hr class="breakline">
+  </div>
+
   <!-- MEET THE TEAM THAT CREATED THIS APP -->
   <section class="team">
     <div class="container" id="header-link">
+      <!-- TEAM INTRO -->
       <div class="row">
         <div class="col-lg-12">
           <h2 class="team-title">Team</h2>
-          <p class="team-description">Be Your Own Bartender was founded by a team of full-stack web developers.</p>
-          <p class="team-description">We believe in providing a simple, streamline process of providing simple alcoholic recipes.</p>
-          <p class="team-description">We are values- and culture-driven. We work with honesty, transparency, and "no ego". For our users, this translates into an upfront approach, based on mutual trust and respect, that forms the basis of profitable, long-lasting relationships.</p>
-          <p class="team-description">We look forward to meeting you and introducting you to the B.Y.O.B way.</p>
+          <p class="team-description">Be Your Own Bartender was founded by a team of full-stack web developers. We believe in providing a simple, streamline process of providing simple alcoholic recipes. We are values- and culture-driven. We work with honesty, transparency, and "no ego". For our users, this translates into an upfront approach, based on mutual trust and respect, that forms the basis of profitable, long-lasting relationships.We look forward to meeting you and introducting you to the B.Y.O.B way.</p>
         </div>
       </div>
       <!-- TEAM MEMBERS -->
       <div class="row">
         <div class="col-lg-4">
+          <img src="" alt="">
           <h3 class="team-member">Caitlyn</h3>
           <p class="team-member-title">Web Developer</p>
         </div>
         <div class="col-lg-4">
+          <img src="" alt="">
           <h3 class="team-member">Morgan</h3>
           <p class="team-member-title">Web Developer</p>
         </div>
         <div class="col-lg-4">
+          <img src="" alt="">
           <h3 class="team-member">Meron</h3>
           <p class="team-member-title">Web Developer</p>
         </div>
@@ -99,13 +104,17 @@
       <!-- TEAM MEMBERS CON'T -->
       <div class="row">
         <div class="col-lg-4">
-          <h3 class="team-member">Tamar</h3></div>
+          <img src="" alt="">
+          <h3 class="team-member">Tamar</h3>
           <p class="team-member-title">Web Developer</p>
+        </div>
         <div class="col-lg-4">
+          <img src="" alt="">
           <h3 class="team-member">Deedee</h3>
           <p class="team-member-title">Web Developer</p>
         </div>
         <div class="col-lg-4">
+          <img src="" alt="">
           <h3 class="team-member">Arthur</h3>
           <p class="team-member-title">Mascot</p>
         </div>
@@ -114,9 +123,13 @@
     </div>
   </section>
 
-  <!-- FOOTER -->
   <div class="container">
-    <footer>
+    <hr class="breakline">
+  </div>
+
+  <!-- FOOTER -->
+  <footer>
+    <div class="container">
       <div class="row">
         <div class="col-lg-4">
           <h5 class="footer-title">Let us help you</h5>
@@ -137,17 +150,22 @@
         </div>
         <div class="col-lg-4">
           <h5 class="footer-title">Policies</h5>
-          <li class="footer-list">Terms & Conditions</li>
-          <li class="footer-list">Privacy Policy</li>
-          <li class="footer-list">Accessibility</li>
+          <ul>
+            <li class="footer-list">Terms & Conditions</li>
+            <li class="footer-list">Privacy Policy</li>
+            <li class="footer-list">Accessibility</li>
+          </ul>
         </div>
       </div>
 
-      <hr class="footer-breakline">
+      <div class="row">
+        <div class="col-lg-12">
+          <h6 class="footer-copyright">© 2019 B.Y.O.B - Be Your Own Bartender, All Rights Reserved.</h6>
+        </div>
+      </div>
 
-      <h6 class="footer-copyright">© 2019 B.Y.O.B - Be Your Own Bartender, All Rights Reserved.</h6>
-    </footer>
-  </div>
+    </div>
+  </footer>
 
 
   <!-- JQUERY CDN -->
