major changes made; header is acting wonky

--- a/html/home.html
+++ b/html/home.html
@@ -18,15 +18,16 @@
     <h1 class="header-brand"><a href="./home.html">B.Y.O.B - Be Your Own Bartender</a></h1>
       <ul class="header-links">
         <!-- LINKS TO ELEMENT ON THIS PAGE WITH THE id="header-link" -->
-        <li><a href="#header-link">About</a></li>
-        <li><a href="#header-link">Team</a></li>
+        <!-- <li><a href="#header-link-about">About</a></li>
+        <li><a href="#header-link-team">Team</a></li> -->
         <!-- LNKS TO A DIFF PAGE -->
         <li><a href="./blog.html">Blog</a></li>
         <li><a href="./recipe.html">Recipes</a></li>
+        <li><a href="./home-bar.html">Home Bar</a></li>
+        <li><a href="./bars.html">Bars</a></li>
       </ul>
     </div>
   </header>
-  </div>
   
   <!-- JUMBOTRON WITH NAME SPELLED OUT AND SHORT MESSAGE -->
   <div class="jumbotron">
@@ -37,9 +38,9 @@
   </div>
 
   <!-- ABOUT SECTION -->
-  <section class="about">
-    <div class="container" id="header-link">
-
+  <div class="about">
+    <div class="container"> 
+      <!-- id="header-link-about" -->
       <div class="row">
         <div class="col-lg-12">
           <h2 class="about-title">About</h2>
@@ -67,15 +68,12 @@
       </div>
 
     </div>
-  </section>  
-
-  <div class="container">
-    <hr class="breakline">
-  </div>
+  </div>  
 
   <!-- MEET THE TEAM THAT CREATED THIS APP -->
-  <section class="team">
-    <div class="container" id="header-link">
+  <div class="team">
+    <div class="container">
+        <!-- id="header-link-team" -->
       <!-- TEAM INTRO -->
       <div class="row">
         <div class="col-lg-12">
@@ -121,17 +119,13 @@
       </div>
 
     </div>
-  </section>
-
-  <div class="container">
-    <hr class="breakline">
   </div>
 
   <!-- FOOTER -->
   <footer>
     <div class="container">
       <div class="row">
-        <div class="col-lg-4">
+        <div class="col-lg-3">
           <h5 class="footer-title">Let us help you</h5>
           <ul>
             <li class="footer-list">Customer Service</li>
@@ -140,7 +134,7 @@
             <li class="footer-list">FAQs</li>
           </ul>
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-3">
           <h5 class="footer-title">Get to know us</h5>
           <ul>
             <li class="footer-list">Corporate Responsibilty</li>
@@ -148,12 +142,20 @@
             <li class="footer-list">Press</li>
           </ul>
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-3">
           <h5 class="footer-title">Policies</h5>
           <ul>
             <li class="footer-list">Terms & Conditions</li>
             <li class="footer-list">Privacy Policy</li>
             <li class="footer-list">Accessibility</li>
+          </ul>
+        </div>
+        <div class="col-lg-3">
+          <h5 class="footer-title">TITLE</h5>
+          <ul>
+            <li class="footer-list">list1</li>
+            <li class="footer-list">list2</li>
+            <li class="footer-list">list3</li>
           </ul>
         </div>
       </div>
