--- a/html/recipes.html
+++ b/html/recipes.html
@@ -29,10 +29,32 @@
     </div>
   </header>
   
+  <!-- INGREDIENT SECTION: CHECK BOXES THAT USER WILL CLICK -->
+  <section class="ingredient-list">
+    <h2>Pick Your Poison!</h2>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-3">
+          <h3><input type="checkbox" name="liquor" value="scotch">Scotch</h3>
+          <h3><input type="checkbox" name="liquor" value="rum">Rum</h3>
+          <h3><input type="checkbox" name="liquor" value="vodka">Vodka</h3>
+          <h3><input type="checkbox" name="liquor" value="bourbon">Bourbon</h3>
+          <h3><input type="checkbox" name="liquor" value="gin">Gin</h3>
+          <h3><input type="checkbox" name="liquor" value="tequila">Tequila</h3>
+          <h3><input type="checkbox" name="liquor" value="brandy">Brandy</h3>
+        </div>
+        <div class="col-lg-3"></div>
+        <div class="col-lg-3"></div>
+        <div class="col-lg-3"></div>
+      </div>
+      <button class="btn" id="submit">Get Your Recipes</button>
+    </div>
+  </section>
+  
+  <div id="recipe-output"></div>
 
-
-   <!-- FOOTER -->
-   <footer>
+  <!-- FOOTER -->
+  <footer>
     <div class="container">
       <div class="row">
         <div class="col-lg-3">
