updates on the look, but not functional at all

--- a/html/bars.html
+++ b/html/bars.html
@@ -22,7 +22,7 @@
         <li><a href="#header-link-team">Team</a></li> -->
         <!-- LNKS TO A DIFF PAGE -->
         <li><a href="./blog.html">Blog</a></li>
-        <li><a href="./recipe.html">Recipes</a></li>
+        <li><a href="./recipes.html">Recipes</a></li>
         <li><a href="./home-bar.html">Home Bar</a></li>
         <li><a href="./bars.html">Bars</a></li>
       </ul>
