--- a/html/home-bar.html
+++ b/html/home-bar.html
@@ -22,7 +22,7 @@
         <li><a href="#header-link-team">Team</a></li> -->
         <!-- LNKS TO A DIFF PAGE -->
         <li><a href="./blog.html">Blog</a></li>
-        <li><a href="./recipe.html">Recipes</a></li>
+        <li><a href="./recipes.html">Recipes</a></li>
         <li><a href="./home-bar.html">Home Bar</a></li>
         <li><a href="./bars.html">Bars</a></li>
       </ul>
@@ -30,7 +30,7 @@
   </header>
 
    <!-- HOME BAR: CONTAINS TITLE AND WHAT THIS PAGE IS FOR -->
-   <section class="home-bar-head-section">
+  <section class="home-bar-head-section">
     <div class="container">
       <h3 class="home-bar-title">Stocking your home bar without breaking the bank.</h3>
       <p class="home-bar-description">Here are B.Y.O.B - Be Your Own Bartender, we realize that not everyone knows where to begin. To that end, we are offering a guide for how to stock your home bar with spirits.</p>
