--- a/html/recipes.html
+++ b/html/recipes.html
@@ -22,7 +22,7 @@
         <li><a href="#header-link-team">Team</a></li> -->
         <!-- LNKS TO A DIFF PAGE -->
         <li><a href="./blog.html">Blog</a></li>
-        <li><a href="./recipe.html">Recipes</a></li>
+        <li><a href="./recipes.html">Recipes</a></li>
         <li><a href="./home-bar.html">Home Bar</a></li>
         <li><a href="./bars.html">Bars</a></li>
       </ul>
@@ -31,26 +31,27 @@
   
   <!-- INGREDIENT SECTION: CHECK BOXES THAT USER WILL CLICK -->
   <section class="ingredient-list">
-    <h2>Pick Your Poison!</h2>
     <div class="container">
-      <div class="row">
+      <h2 class="ingredient-list-title">Pick Your Poison!</h2>
+      <div class="row ingredient-row">
         <div class="col-lg-3">
-          <h3><input type="checkbox" name="liquor" value="scotch">Scotch</h3>
-          <h3><input type="checkbox" name="liquor" value="rum">Rum</h3>
-          <h3><input type="checkbox" name="liquor" value="vodka">Vodka</h3>
-          <h3><input type="checkbox" name="liquor" value="bourbon">Bourbon</h3>
-          <h3><input type="checkbox" name="liquor" value="gin">Gin</h3>
-          <h3><input type="checkbox" name="liquor" value="tequila">Tequila</h3>
-          <h3><input type="checkbox" name="liquor" value="brandy">Brandy</h3>
+          <h3 class="ingredients"><input type="checkbox" name="liquor" value="scotch">Scotch</h3>
+          <h3 class="ingredients"><input type="checkbox" name="liquor" value="rum">Rum</h3>
+          <h3 class="ingredients"><input type="checkbox" name="liquor" value="vodka">Vodka</h3>
+          <h3 class="ingredients"><input type="checkbox" name="liquor" value="bourbon">Bourbon</h3>
+          <h3 class="ingredients"><input type="checkbox" name="liquor" value="gin">Gin</h3>
+          <h3 class="ingredients"><input type="checkbox" name="liquor" value="tequila">Tequila</h3>
+          <h3 class="ingredients"><input type="checkbox" name="liquor" value="brandy">Brandy</h3>
         </div>
         <div class="col-lg-3"></div>
         <div class="col-lg-3"></div>
         <div class="col-lg-3"></div>
       </div>
-      <button class="btn" id="submit">Get Your Recipes</button>
+      <button class="get-recipes-btn" id="submit">Get Your Recipes</button>
     </div>
   </section>
-  
+
+  <!-- RECIPE SECTION: CARDS OF RECIPES -->
   <div id="recipe-output"></div>
 
   <!-- FOOTER -->
